--- a/entrada.in
+++ b/entrada.in
@@ -1,15 +1,15 @@
 02
-37
+21
+07
+25
+09
 10
-20
 05
-06
-27
-01
-10
+08
 11
-2011
-16
+11
+2013
+35
 University of California
 @uc.edu
 +413(805)0893-8000
@@ -90,10 +90,123 @@ CUHK
 +852(394)0003-7000
 Chinese
 Shatin, Hong Kong, China
-Graph Indexing of Road Networks for Shortest Path Queries with Label Restrictions 
-Michael Rice 
-University of California
-Vassilis Tsotras 
-University of California
+Vienna University of Techology
+@vienna.edu
++43(1)588-010
+Austrian
+Karlsplatz 13, 1040 Wien, Austria
+University of Melbourne
+@unimelb.edu.au
++61(3)9035-5511
+Australian
+Parkville VIC 3010, Australia
+Purdue University
+@umb.edu
++1(617)287-6479
+American
+West Lafayette, IN 47907, United States
+Georgia Institute of Technology
+@rutgers.edu
++8(48)932-8718
+American
+New Brunswick, NJ 08901
+University of Bremen
+@bremen.org
++49(818)421-2181
+German
+Bibliothekstrabe 1, 28359 Bremen, Germany
+USC
+@usc.edu
++1(213)740-2311
+American
+Los Angeles, CA 90089
+Karlsruhe Institute of Technology, IPD
+@kit.edu
++49(721)608-44316
+German
+76131 Karlsruhe, Germany
+University of Queensland
+@itee.uq.edu.au
++61(7)3365-1649
+Australian
+Brisbane QLD 4072 Australia
+Utrecht University
+@uu.nl
+Dutch
++31(30)253-3550
+3508 TC Utrecht, The Netherlands
+Aalborg University
+@cs.aau.dk
++45(99)40-9940
+Danish
+Selma Lagerlöfs Vej 300, DK-9220 Aalborg, Denmark
+Virginia Tech
+@tech.virginia.com
++1(54)-231-6000
+Chinese
+Blacksburg, VA 24061, United States
+University of Minnesota
+@uminnesota.com
++1(612)625-5000
+American
+Minneapolis, MN 55455, United States
+Swarthmore College
+@swarthmore.com
++1(610)328-8000
+American
+500 College Ave, Swarthmore, PA 19081, United States
+University of Maryland
+@umaryland.edu
++1(301)405-1000
+American
+College Park, MD 20742, United States
+Engineer Research and Development Center
+@army.gov
++1(601)636-3111
+American
+3909 Halls Ferry Road - Vicksburg, MS 39180-6199
+Zhejiang University
+@zhejiang.edu
++86(571)8517-2244
+Chinese
+38 Zheda Rd, Xihu, Hangzhou, Zhejiang, China, 310027
+TU Eindhoven
+@eindhoven.edu
++31(40)247-9111
+Dutch
+5612 AZ Eindhoven, Netherlands
+National Cheng Kung University
+@cku.edu
++886(6)275-7575
+Taiwan
+701, Taiwan, Tainan City, East District
+Heidelberg University
+@hu.edu
++49(6)221-540
+German
+Grabengasse 1, 69117 Heidelberg, Germany
+Improving Passage Ranking with User Behavior Information
+Weize Kong
+University of Massachusetts
+Elif Aktolga
+University of Massachusetts
+James Allan
+University of Massachusetts
+>
+Discovering and Managing Quantitative Association Rules
+Chunyao Song
+University of Massachusetts
+Tingjian Ge
+University of Massachusetts
+>
+Query Execution Timing: Taming Real-time Anytime Queries on Multicore Processors
+Chunyao Song
+University of Massachusetts
+Zheng Li
+University of Massachusetts
+Tingjian Ge
+University of Massachusetts
+Jie Wang
+University of Massachusetts
 >
 EOF
