--- a/Trabalho05/Conferencias/nbproject/project.properties
+++ b/Trabalho05/Conferencias/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.ojdbc6_g.jar=lib/ojdbc6_g.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6_g.jar}
+    ${file.reference.ojdbc6_g.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
