--- a/Trabalho05/Conferencias/nbproject/private/private.properties
+++ b/Trabalho05/Conferencias/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/Rina/Library/Application Support/NetBeans/7.3.1/build.properties
+user.properties.file=/home/ch/.netbeans/8.0.1/build.properties
